# hwmanager

./: CMakeLists.txt  LICENSE  org.gspine.hardware.conf  readme.md
include/button/: powerbutton.h  volumebutton.h
include/touchscreen/: touchscreen.h  touchscreenutils.h
include/utils/: eventutils.h
src/: main.cpp
src/button/: powerbutton.cpp  volumebutton.cpp
src/touchscreen/: touchscreen.cpp  touchscreenutils.cpp
src/utils/: eventutils.cpp
